   data, the new built-in functions `defined(key)` and `value_of(key, default)`
   can be used so that the template also works in strict lookup mode. These
   functions were previously only available when using Genshi via the template
   engine plugin (for compatibility with Kid).
 * `style` attributes are no longer allowed by the `HTMLSanitizer` by default.
   If it is explicitly added to the set of safe attributes, and unicode escapes
   in the attribute value are handled correctly.
 * Namespace declarations on conditional elements (for example using a `py:if`
   directive`) are no longer moved to the following element when the element
   originally carrying the declaration is removed from the stream (ticket #107).


Version 0.3.6
http://svn.edgewall.org/repos/genshi/tags/0.3.6/
(Dec 11 2006, from branches/stable/0.3.x)

 * The builder API now accepts streams as children of elements and fragments.


Version 0.3.5
http://svn.edgewall.org/repos/genshi/tags/0.3.5/
(Nov 22 2006, from branches/stable/0.3.x)

 * Fix XPath traversal in match templates. Previously, `div/p` would be treated 
   the same as `div//p`, i.e. it would match all descendants and not just the
   immediate children.
 * Preserve whitespace in HTML `<pre>` elements also when they contain child
   elements.
 * Match templates no longer match their own output (ticket #77).
 * Blank lines before directives in text templates are now preserved as
   expected (ticket #62).


Version 0.3.4
http://svn.edgewall.org/repos/genshi/tags/0.3.4/
(Nov 2 2006, from branches/stable/0.3.x)

 * The encoding of HTML and XML files, as well as markup and text templates,
   can now be specified. Also, the encoding specified in XML declarations is
   now respected unless an expiclit encoding is requested.
 * Expressions used as arguments for `py:with`, `py:def`, and `py:for`
   directives can now contain non-ASCII strings.


Version 0.3.3
http://svn.edgewall.org/repos/genshi/tags/0.3.3/