@@ -53,11 +53,16 @@ http://svn.edgewall.org/repos/genshi/tags/0.4.0/
    functions were previously only available when using Genshi via the template
    engine plugin (for compatibility with Kid).
  * `style` attributes are no longer allowed by the `HTMLSanitizer` by default.
-   If it is explicitly added to the set of safe attributes, and unicode escapes
-   in the attribute value are handled correctly.
+   If they are explicitly added to the set of safe attributes, any unicode
+   escapes in the attribute value are now handled properly.
  * Namespace declarations on conditional elements (for example using a `py:if`
    directive`) are no longer moved to the following element when the element
    originally carrying the declaration is removed from the stream (ticket #107).
+ * Added basic built-in support for internationalizing templates by providing
+   a new `Translator` class that can both extract localizable strings from a
+   stream, and replace those strings with their localizations at render time.
+   The code for this was largely taken from previous work done by Matt Good
+   and David Fraser.
 
 
 Version 0.3.6
